target and source selection visual implemention has been added & prevention of obstacle, target and source overlap! (source can be target)

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -8,21 +8,34 @@
 
 .state-unknown {
   background-color: white;
+  color: black;
 }
 
 .state-seen {
   background-color: rgb(133, 231, 255);
+  color: black;
 }
 
 .state-path {
   background-color: rgba(253, 255, 111, 0.897);
+  color: black;
 }
 
 .state-processed {
   background-color: rgb(127, 255, 110);
+  color: black;
 }
 
 .state-obstacle {
   background-color: black;
+  color: #fff;
+}
+
+.source-type {
+  background-color: blueviolet;
+  color: #fff;
+}
+.target-type {
+  background-color: rgb(231, 56, 94);
   color: #fff;
 }
